issue #2272 - fix vertical align of title and close button

--- a/src/projects/detail/components/timeline/Milestone/Milestone.scss
+++ b/src/projects/detail/components/timeline/Milestone/Milestone.scss
@@ -264,7 +264,7 @@
   border: 0;
   background-color: transparent;
   display: block;
-  margin: 3px 0 0 3 * $base-unit;
+  margin: 0 0 0 3 * $base-unit;
   padding: 0;
 
   > svg {
